Ajusta testes de aceitação intermitentes.