@@ -4,22 +4,21 @@ import br.com.dbccompany.votacaocooperado.domain.Assembleia;
 import br.com.dbccompany.votacaocooperado.service.AssembleiaService;
 import br.com.dbccompany.votacaocooperado.web.dto.AssembleiaDto;
 import jakarta.validation.Valid;
+import lombok.extern.log4j.Log4j2;
 import org.modelmapper.ModelMapper;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
-import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
+import static br.com.dbccompany.votacaocooperado.shared.util.ObjectMapperUtil.generateJson;
+import static org.springframework.http.HttpStatus.CREATED;
+
+@Log4j2
 @RestController
 @RequestMapping("/v1/api/assembleias")
 @CrossOrigin(origins = "*")
 public class AssembleiaResource {
-
-    private static final Logger log = LoggerFactory.getLogger(AssembleiaResource.class);
 
     private final AssembleiaService assembleiaService;
     private final ModelMapper modelMapper;
@@ -32,21 +31,24 @@ public class AssembleiaResource {
 
     @GetMapping
     public ResponseEntity<List<AssembleiaDto>> listarTodos() {
-        log.info("Requisição Rest para listar todas as assembleias");
+        log.info("---> Request GET /v1/api/assembleias");
         List<Assembleia> assembleias = assembleiaService.listarTodos();
         List<AssembleiaDto> assembleiasDto = assembleias.stream()
                 .map(assembleia -> modelMapper.map(assembleia, AssembleiaDto.class))
-                .collect(Collectors.toList());
+                .toList();
+        log.info("<--- Response GET /v1/api/assembleias: {}", generateJson(assembleiasDto));
         return ResponseEntity.ok(assembleiasDto);
     }
 
     @PostMapping
     public ResponseEntity<AssembleiaDto> cadastrar(@Valid @RequestBody AssembleiaDto assembleiaDto) {
-        log.info("Requisição Rest para cadastrar assembleia: {}", assembleiaDto);
+        log.info("---> Request POST /v1/api/assembleias: {}", generateJson(assembleiaDto));
         Assembleia assembleiaEntidade = modelMapper.map(assembleiaDto, Assembleia.class);
         Assembleia assembleiaCadastrada = assembleiaService.cadastrar(assembleiaEntidade);
+        AssembleiaDto assembleiaCadastradaDto = modelMapper.map(assembleiaCadastrada, AssembleiaDto.class);
+        log.info("<--- Response POST /v1/api/assembleias: {}", generateJson(assembleiaCadastradaDto));
         return ResponseEntity
-                .status(HttpStatus.CREATED)
-                .body(modelMapper.map(assembleiaCadastrada, AssembleiaDto.class));
+                .status(CREATED)
+                .body(assembleiaCadastradaDto);
     }
 }
