@@ -4,22 +4,21 @@ import br.com.dbccompany.votacaocooperado.domain.Voto;
 import br.com.dbccompany.votacaocooperado.service.VotoService;
 import br.com.dbccompany.votacaocooperado.web.dto.VotoDto;
 import jakarta.validation.Valid;
+import lombok.extern.log4j.Log4j2;
 import org.modelmapper.ModelMapper;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
-import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
+import static br.com.dbccompany.votacaocooperado.shared.util.ObjectMapperUtil.generateJson;
+import static org.springframework.http.HttpStatus.CREATED;
+
+@Log4j2
 @RestController
 @RequestMapping("/v1/api/votos")
 @CrossOrigin(origins = "*")
 public class VotoResource {
-
-    private static final Logger log = LoggerFactory.getLogger(VotoResource.class);
 
     private final VotoService votoService;
     private final ModelMapper modelMapper;
@@ -32,21 +31,24 @@ public class VotoResource {
 
     @GetMapping
     public ResponseEntity<List<VotoDto>> listar() {
-        log.info("Requisição Rest para listar todos os votos");
+        log.info("---> Request GET /v1/api/votos");
         List<Voto> votos = votoService.listarTodos();
         List<VotoDto> votosDto = votos.stream()
                 .map(voto -> modelMapper.map(voto, VotoDto.class))
-                .collect(Collectors.toList());
+                .toList();
+        log.info("<--- Response GET /v1/api/votos: {}", generateJson(votosDto));
         return ResponseEntity.ok(votosDto);
     }
 
     @PostMapping
     public ResponseEntity<VotoDto> cadastrar(@Valid @RequestBody VotoDto votoDto) {
-        log.info("Requisição Rest para cadastrar voto: {}", votoDto);
+        log.info("---> Request POST /v1/api/votos: {}", generateJson(votoDto));
         Voto votoEntidade = modelMapper.map(votoDto, Voto.class);
         Voto votoCadastrado = votoService.cadastrar(votoEntidade);
+        VotoDto votoCadastradoDto = modelMapper.map(votoCadastrado, VotoDto.class);
+        log.info("<--- Response POST /v1/api/votos: {}", generateJson(votoCadastradoDto));
         return ResponseEntity
-                .status(HttpStatus.CREATED)
-                .body(modelMapper.map(votoCadastrado, VotoDto.class));
+                .status(CREATED)
+                .body(votoCadastradoDto);
     }
 }
